# kika-orbit

./: .env.example  .gitignore  PROMPT_CONTINUIDAD_DESKTOP.md  README.md  pyproject.toml
admin/: .htaccess  admin-responsive.css  auth.php  calendar.php  calendar_api.php  calendar_app_legacy.js  calendar_legacy.php  calendar_month_app.js  calendar_store.php  castel-theme.js  config_time_slots.json  correo-avisos.php  editor.php  esquema-sql-reservas-bloque.sql  index.php  mail-test-calendar.php  mail_config.example.php  mailer.php  manifest.webmanifest  offline.html  pwa.js  rebuild.php  security.php  sql.php  sw.js
admin/includes/: admin_sidebar.php
app/assets/: ccg-header-logo.css  hero-escudo.css
backend/kika_orbit/: __init__.py  database.py  main.py  models.py  schemas.py  settings.py
backend/kika_orbit/api/: centers.py  events.py  health.py  holidays.py  integrations.py  organizations.py
backend/kika_orbit/domain/: __init__.py  admin_roster.py  holidays.py  rut.py
backend/kika_orbit/integrations/: google_oauth.py
backend/kika_orbit/web/: __init__.py
backend/kika_orbit/web/static/: app.js  index.html  manifest.webmanifest  offline.html  styles.css  sw.js
data/: admin_roster.example.json  authorized_emails.example.json  calendar_backend.example.json  calendar_store.example.json  site.example.json
docs/: estrategia-google-sin-dominio.md  flujo-correos-calendario-privado.md  identidad-admin-rut.md
tests/: test_api.py
