[project]
name = "kika-orbit"
version = "0.1.0"
description = "Web SaaS for university calendars, student centers, institutional scheduling, and shared spaces."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "pydantic-settings>=2.6.1",
    "psycopg[binary]>=3.2.3",
    "python-docx>=1.1.2",
    "google-api-python-client>=2.154.0",
    "google-auth-oauthlib>=1.2.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.3",
    "ruff>=0.8.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
